# automaton-auditor

./: .env  .env.example  .gitignore  CODEBASE_EXPLAINED.md  Makefile  README.md  audit.sh  main.py  pyproject.toml  test_llm.py  test_local.py
audit/report_onpeer_generated/: audit_github_com_gemechisworku_automaton-auditor.md  audit_github_com_ramlla92_Automation_auditor.md
audit/report_onself_generated/: audit_LOCAL_AUDIT_WORKSPACE.md  audit_github_com_Mistire_automaton-auditor.md
audit/reports_generated/: audit_LOCAL_AUDIT_WORKSPACE.md  audit_github_com_Mistire_automaton-auditor.md  audit_github_com_ramlla92_Automation_auditor.md
reports/: final_report.md  interim_report.md
rubric/: week2_rubric.json
src/: graph.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  llm_tools.py  repo_tools.py  safety.py
